UIP-3336: Fixed expand icon in Gateways template

--- a/packages/ui-library/src/css/icons/_variables.scss
+++ b/packages/ui-library/src/css/icons/_variables.scss
@@ -1,150 +1,156 @@
 $icomoon-font-path: "../fonts/icons"; // KEEP - designates relative path to icons file where this is imported
 $icomoon-font-family: "iconfont"; // KEEP - designates name of font
 
-$icon-star-outline: "\e902";
-$icon-star: "\e901";
-$icon-kebab: "\e900";
-$icon-ldap: "\e947";
-$icon-shield-arrow: "\e946";
-$icon-key-three: "\e944";
-$icon-key-two: "\e945";
-$icon-open-lock: "\e943";
-$icon-download-box: "\e942";
-$icon-camera: "\e935";
-$icon-email: "\e936";
-$icon-ghost-disabled: "\e937";
-$icon-ghost-timed-out: "\e938";
-$icon-spinner-alt: "\e939";
-$icon-error: "\e93a";
-$icon-hour-glass: "\e93b";
-$icon-safe: "\e93c";
-$icon-success-alt: "\e93d";
-$icon-ghost-error: "\e93e";
-$icon-ghost-success: "\e93f";
-$icon-incomplete: "\e940";
-$icon-mobile: "\e941";
-$icon-account: "\61";
-$icon-admin-account: "\74";
-$icon-alert: "\21";
-$icon-alert-solid: "\e905";
-$icon-approve: "\70";
-$icon-apps: "\6c";
-$icon-as: "\e906";
-$icon-badge: "\62";
-$icon-bar-chart: "\e90f";
-$icon-bar-line-chart: "\e913";
-$icon-beaker: "\e90a";
-$icon-books: "\e907";
-$icon-browser: "\e917";
-$icon-bullet-list: "\e920";
-$icon-cabinet: "\24";
-$icon-calendar: "\43";
-$icon-cert-connection: "\e925";
-$icon-certificate: "\e908";
-$icon-chat: "\e90e";
-$icon-chat-square: "\e918";
-$icon-circle: "\2e";
-$icon-circle-o: "\4f";
-$icon-clear: "\58";
-$icon-clipboard: "\e909";
-$icon-close: "\78";
-$icon-close-arrow: "\5e";
-$icon-code: "\e91d";
-$icon-cog: "\67";
-$icon-cog-filled: "\e919";
-$icon-cogs: "\e91c";
-$icon-collapse: "\63";
-$icon-connection-status: "\e931";
-$icon-curly-braces: "\e921";
-$icon-delete: "\64";
-$icon-desktop: "\e916";
-$icon-details: "\e90b";
-$icon-device: "\e90c";
-$icon-directory: "\3d";
-$icon-directory-hollow: "\23";
-$icon-docs: "\e927";
-$icon-download: "\44";
-$icon-dropdown-arrow: "\76";
-$icon-earth: "\e90d";
-$icon-edit: "\65";
-$icon-error-triangle: "\e914";
-$icon-expand: "\45";
-$icon-expand-arrow: "\59";
-$icon-facebook: "\e929";
-$icon-file: "\2c";
-$icon-filter: "\66";
-$icon-fingerprint: "\e910";
-$icon-globe: "\a1";
-$icon-grip: "\47";
-$icon-group: "\e911";
-$icon-help: "\68";
-$icon-help-rounded: "\48";
-$icon-help-solid: "\e91e";
-$icon-idp: "\6a";
-$icon-image: "\69";
-$icon-info: "\49";
-$icon-key: "\4b";
-$icon-left: "\3c";
-$icon-line-chart: "\e92c";
-$icon-link: "\6b";
-$icon-linkedin: "\e92b";
-$icon-lock: "\42";
-$icon-lock-large: "\4c";
-$icon-lockout: "\e912";
-$icon-menu: "\6d";
-$icon-minus: "\2d";
-$icon-minus-rounded: "\5f";
-$icon-native-app: "\e934";
-$icon-network: "\25";
-$icon-new-window: "\e91f";
-$icon-next: "\7d";
-$icon-nodes: "\e915";
-$icon-non-interactive: "\e91a";
-$icon-notepad: "\e91b";
-$icon-on-off: "\e922";
-$icon-org-chart: "\e923";
-$icon-overview: "\6f";
-$icon-pin: "\4e";
-$icon-play: "\e924";
-$icon-plus: "\2b";
-$icon-plus-rounded: "\2a";
-$icon-population: "\e926";
-$icon-previous: "\7b";
-$icon-puzzle: "\7a";
-$icon-radar: "\e928";
-$icon-resend: "\72";
-$icon-resource: "\e92a";
-$icon-right: "\3e";
-$icon-robot: "\e92d";
-$icon-saml: "\e930";
-$icon-search: "\73";
-$icon-server: "\20ac";
-$icon-settings: "\53";
-$icon-shield: "\e92e";
-$icon-signpost: "\e933";
-$icon-slider: "\7e";
-$icon-sort-asc: "\41";
-$icon-sort-desc: "\2200";
-$icon-sort-none: "\7c";
-$icon-sp: "\7f";
-$icon-spin-down: "\30";
-$icon-spin-up: "\31";
-$icon-spinner: "\50";
-$icon-success: "\79";
-$icon-success-round: "\e92f";
-$icon-support: "\71";
-$icon-tag: "\e932";
-$icon-terminal: "\e948";
-$icon-thumb: "\54";
-$icon-timer: "\e949";
-$icon-twitter: "\e94a";
-$icon-undo: "\6e";
-$icon-unlink: "\e94b";
-$icon-user: "\75";
-$icon-user_directory: "\e94c";
-$icon-users: "\55";
-$icon-view: "\56";
-$icon-view-hidden: "\2f";
-$icon-walkthrough: "\4d";
-$icon-wand: "\57";
-$icon-welcome: "\77";
+// This is necessary to make all icons work in IE. Sass will escape all of them by default,
+// but IE is unable to handle uppercase characters without a specific text-transform property.
+@function add-backslash($icon-code) {
+    @return unquote('"') + unquote(str-insert($icon-code,'\\', 1)) + unquote('"');
+}
+
+$icon-star-outline: add-backslash("e902");
+$icon-star: add-backslash("e901");
+$icon-kebab: add-backslash("e900");
+$icon-ldap: add-backslash("e947");
+$icon-shield-arrow: add-backslash("e946");
+$icon-key-three: add-backslash("e944");
+$icon-key-two: add-backslash("e945");
+$icon-open-lock: add-backslash("e943");
+$icon-download-box: add-backslash("e942");
+$icon-camera: add-backslash("e935");
+$icon-email: add-backslash("e936");
+$icon-ghost-disabled: add-backslash("e937");
+$icon-ghost-timed-out: add-backslash("e938");
+$icon-spinner-alt: add-backslash("e939");
+$icon-error: add-backslash("e93a");
+$icon-hour-glass: add-backslash("e93b");
+$icon-safe: add-backslash("e93c");
+$icon-success-alt: add-backslash("e93d");
+$icon-ghost-error: add-backslash("e93e");
+$icon-ghost-success: add-backslash("e93f");
+$icon-incomplete: add-backslash("e940");
+$icon-mobile: add-backslash("e941");
+$icon-account: add-backslash("61");
+$icon-admin-account: add-backslash("74");
+$icon-alert: add-backslash("21");
+$icon-alert-solid: add-backslash("e905");
+$icon-approve: add-backslash("70");
+$icon-apps: add-backslash("6c");
+$icon-as: add-backslash("e906");
+$icon-badge: add-backslash("62");
+$icon-bar-chart: add-backslash("e90f");
+$icon-bar-line-chart: add-backslash("e913");
+$icon-beaker: add-backslash("e90a");
+$icon-books: add-backslash("e907");
+$icon-browser: add-backslash("e917");
+$icon-bullet-list: add-backslash("e920");
+$icon-cabinet: add-backslash("24");
+$icon-calendar: add-backslash("43");
+$icon-cert-connection: add-backslash("e925");
+$icon-certificate: add-backslash("e908");
+$icon-chat: add-backslash("e90e");
+$icon-chat-square: add-backslash("e918");
+$icon-circle: add-backslash("2e");
+$icon-circle-o: add-backslash("4f");
+$icon-clear: add-backslash("58");
+$icon-clipboard: add-backslash("e909");
+$icon-close: add-backslash("78");
+$icon-close-arrow: add-backslash("5e");
+$icon-code: add-backslash("e91d");
+$icon-cog: add-backslash("67");
+$icon-cog-filled: add-backslash("e919");
+$icon-cogs: add-backslash("e91c");
+$icon-collapse: add-backslash("63");
+$icon-connection-status: add-backslash("e931");
+$icon-curly-braces: add-backslash("e921");
+$icon-delete: add-backslash("64");
+$icon-desktop: add-backslash("e916");
+$icon-details: add-backslash("e90b");
+$icon-device: add-backslash("e90c");
+$icon-directory: add-backslash("3d");
+$icon-directory-hollow: add-backslash("23");
+$icon-docs: add-backslash("e927");
+$icon-download: add-backslash("44");
+$icon-dropdown-arrow: add-backslash("76");
+$icon-earth: add-backslash("e90d");
+$icon-edit: add-backslash("65");
+$icon-error-triangle: add-backslash("e914");
+$icon-expand: add-backslash("45");
+$icon-expand-arrow: add-backslash("59");
+$icon-facebook: add-backslash("e929");
+$icon-file: add-backslash("2c");
+$icon-filter: add-backslash("66");
+$icon-fingerprint: add-backslash("e910");
+$icon-globe: add-backslash("a1");
+$icon-grip: add-backslash("47");
+$icon-group: add-backslash("e911");
+$icon-help: add-backslash("68");
+$icon-help-rounded: add-backslash("48");
+$icon-help-solid: add-backslash("e91e");
+$icon-idp: add-backslash("6a");
+$icon-image: add-backslash("69");
+$icon-info: add-backslash("49");
+$icon-key: add-backslash("4b");
+$icon-left: add-backslash("3c");
+$icon-line-chart: add-backslash("e92c");
+$icon-link: add-backslash("6b");
+$icon-linkedin: add-backslash("e92b");
+$icon-lock: add-backslash("42");
+$icon-lock-large: add-backslash("4c");
+$icon-lockout: add-backslash("e912");
+$icon-menu: add-backslash("6d");
+$icon-minus: add-backslash("2d");
+$icon-minus-rounded: add-backslash("5f");
+$icon-native-app: add-backslash("e934");
+$icon-network: add-backslash("25");
+$icon-new-window: add-backslash("e91f");
+$icon-next: add-backslash("7d");
+$icon-nodes: add-backslash("e915");
+$icon-non-interactive: add-backslash("e91a");
+$icon-notepad: add-backslash("e91b");
+$icon-on-off: add-backslash("e922");
+$icon-org-chart: add-backslash("e923");
+$icon-overview: add-backslash("6f");
+$icon-pin: add-backslash("4e");
+$icon-play: add-backslash("e924");
+$icon-plus: add-backslash("2b");
+$icon-plus-rounded: add-backslash("2a");
+$icon-population: add-backslash("e926");
+$icon-previous: add-backslash("7b");
+$icon-puzzle: add-backslash("7a");
+$icon-radar: add-backslash("e928");
+$icon-resend: add-backslash("72");
+$icon-resource: add-backslash("e92a");
+$icon-right: add-backslash("3e");
+$icon-robot: add-backslash("e92d");
+$icon-saml: add-backslash("e930");
+$icon-search: add-backslash("73");
+$icon-server: add-backslash("20ac");
+$icon-settings: add-backslash("53");
+$icon-shield: add-backslash("e92e");
+$icon-signpost: add-backslash("e933");
+$icon-slider: add-backslash("7e");
+$icon-sort-asc: add-backslash("41");
+$icon-sort-desc: add-backslash("2200");
+$icon-sort-none: add-backslash("7c");
+$icon-sp: add-backslash("7f");
+$icon-spin-down: add-backslash("30");
+$icon-spin-up: add-backslash("31");
+$icon-spinner: add-backslash("50");
+$icon-success: add-backslash("79");
+$icon-success-round: add-backslash("e92f");
+$icon-support: add-backslash("71");
+$icon-tag: add-backslash("e932");
+$icon-terminal: add-backslash("e948");
+$icon-thumb: add-backslash("54");
+$icon-timer: add-backslash("e949");
+$icon-twitter: add-backslash("e94a");
+$icon-undo: add-backslash("6e");
+$icon-unlink: add-backslash("e94b");
+$icon-user: add-backslash("75");
+$icon-user_directory: add-backslash("e94c");
+$icon-users: add-backslash("55");
+$icon-view: add-backslash("56");
+$icon-view-hidden: add-backslash("2f");
+$icon-walkthrough: add-backslash("4d");
+$icon-wand: add-backslash("57");
+$icon-welcome: add-backslash("77");
