UIP-3315: Fixed issue where break-word mixin didn't work for some strings in IE

--- a/packages/ui-library/src/css/_mixins.scss
+++ b/packages/ui-library/src/css/_mixins.scss
@@ -102,6 +102,8 @@
 
 @mixin break-word {
     overflow-wrap: break-word;
+    // Added this line for IE, which won't wrap inline elements without a width.
+    max-width: 100%;
     word-wrap: break-word;
     word-break: break-word;
 }
