UIP-3411: IdP icons were not shown under IE11 or had wrong width

--- a/packages/end-user/src/css/components/_account-table.scss
+++ b/packages/end-user/src/css/components/_account-table.scss
@@ -6,6 +6,7 @@
     &__icon {
         flex: 1;
         flex-grow: 0;
+        flex-basis: auto;
         fill: $color-neutral-20;
 
         @media (max-width: $breakpoint-mobile) {
