UIP-3406 correcting placement of undo icon when used with undo prop

--- a/packages/ui-library/src/css/_inputs.scss
+++ b/packages/ui-library/src/css/_inputs.scss
@@ -1962,6 +1962,9 @@ input[type=file] {
         .form-error-icon {
             top: $message-icon-margin;
         }
+        .undo {
+            right: 30px;
+        }
     }
     &.input-select {
         .wrapper {
