--- a/packages/ui-library/src/css/_buttons.scss
+++ b/packages/ui-library/src/css/_buttons.scss
@@ -736,6 +736,14 @@ button.tile-button {
     &--stacked {
         display: block;
 
+        .flex-row {
+            display: block;
+
+            a {
+                display: flex;
+            }
+        }
+
         > * {
             margin-right: 0;
             margin-bottom: $spacing-md;
