UIP-3455: Account name in AccountsTable should have more priority than "Unlink Account" button

--- a/packages/end-user/src/css/components/_account-table.scss
+++ b/packages/end-user/src/css/components/_account-table.scss
@@ -46,13 +46,9 @@
     }
 
     &__row-unlink {
-        flex: 2;
+        flex: 0 1 auto;
         text-align: right;
         min-width: 0;
-
-        @media (max-width: $breakpoint-mobile) {
-            flex: 3;
-        }
     }
 
     &__row-details {
