--- a/packages/ui-library/src/css/charting/_chart-wrapper.scss
+++ b/packages/ui-library/src/css/charting/_chart-wrapper.scss
@@ -4,7 +4,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 100%;
+
+    &__chart {
+        max-height: 100%;
+    }
 
     &__loader,
     &__message {
