--- a/packages/end-user/src/css/styles.scss
+++ b/packages/end-user/src/css/styles.scss
@@ -71,6 +71,7 @@
 @import './components/profile-image';
 @import './components/column';
 @import './components/phone-input';
+@import './components/social-button';
 
 // spacing components are after so they take precedence\
 
