--- a/packages/branding-themes/themes/split/split.scss
+++ b/packages/branding-themes/themes/split/split.scss
@@ -3,18 +3,22 @@ $THEME_NAME: 'split';
 $colors: getThemeColors($THEME_NAME);
 $images: getThemeImages($THEME_NAME);
 
-body {
-    background: map-get($colors, 'background');
-}
+@include base($images, $colors);
 
+/**
+ * Styles
+ */
 .card {
     max-width: 600px;
     height: auto;
     margin-bottom: 40px;
     margin-top: 20px;
     border-radius: 3px;
+    box-shadow: none;
 
-    @media only screen and (max-width: 600px) {
+    @media all and (max-width: 600px) {
+        max-width: 100%;
+        height: 100%;
         border-radius: 0;
         margin-top: 0;
         margin-bottom: 0;
@@ -30,7 +34,7 @@ body {
 .flex-container {
     display: flex;
 
-    @media only screen and (max-width: 600px) {
+    @media all and (max-width: 600px) {
         flex-direction: column;
         width: 100%;
         margin-left: auto;
@@ -40,13 +44,15 @@ body {
 
 .branding-template-logo-container {
     width: 30%;
-    border-right: 10px solid map-get($colors, 'background');
+    border-right-width: 10px;
+    border-right-style: solid;
     padding: 50px 30px;
 
-    @media only screen and (max-width: 600px) {
+    @media all and (max-width: 600px) {
         border-right: none;
         width: auto;
-        border-bottom: 4px solid map-get($colors, 'background');
+        border-bottom-width: 4px;
+        border-bottom-style: solid;
     }
 }
 
@@ -56,7 +62,7 @@ body {
     margin-top: auto;
     margin-bottom: auto;
 
-    @media only screen and (max-width: 600px) {
+    @media all and (max-width: 600px) {
         width: initial;
     }
 }
@@ -68,7 +74,7 @@ body {
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
 
-    @media only screen and (max-width: 600px) {
+    @media all and (max-width: 600px) {
         position: relative;
         top: 50%;
         transform: none;
@@ -90,9 +96,11 @@ body {
     margin-bottom: 15px;
 }
 
-.feedback--error,
-.feedback__icon {
-    font-size: 22px;
+.branding-template-feedback {
+    .feedback--error,
+    .feedback__icon {
+        font-size: 22px;
+    }
 }
 
 .branding-template-form {
@@ -100,19 +108,23 @@ body {
 }
 
 .text-input {
-    border: 1px solid map-get($colors, 'background');
+    border-width: 1px;
+    border-style: solid;
     border-radius: 2px;
 }
 
 .branding-template-primary-button {
     color: #fff;
-    background: map-get($colors, 'button');
-    border-color: map-get($colors, 'button');
     width: 50%;
     margin-right: auto;
     margin-left: auto;
     text-transform: uppercase;
     font-weight: 700;
+    border-width: 0;
+
+    &:hover {
+        opacity: 0.9;
+    }
 }
 
 .social-button__button {
