UIP-2794: Helphint Word Break

--- a/packages/ui-library/src/css/_help.scss
+++ b/packages/ui-library/src/css/_help.scss
@@ -43,6 +43,7 @@
         font-weight: normal;
         padding: 8px 10px;
         max-width: 400px;
+        word-wrap: break-word;
         pointer-events: auto !important;
         -webkit-box-shadow: 4px 4px 9px -8px rgba(0, 0, 0, 0.64);
         -moz-box-shadow: 4px 4px 9px -8px rgba(0, 0, 0, 0.64);
