--- a/packages/ui-library/src/css/_help.scss
+++ b/packages/ui-library/src/css/_help.scss
@@ -42,8 +42,8 @@
         white-space: normal;
         font-weight: normal;
         padding: 8px 10px;
+        @include break-word;
         max-width: 400px;
-        word-wrap: break-word;
         pointer-events: auto !important;
         -webkit-box-shadow: 4px 4px 9px -8px rgba(0, 0, 0, 0.64);
         -moz-box-shadow: 4px 4px 9px -8px rgba(0, 0, 0, 0.64);
