UIP-3089: Text component left align by default

--- a/packages/ui-library/src/css/_text.scss
+++ b/packages/ui-library/src/css/_text.scss
@@ -92,6 +92,10 @@
         text-align: center;
     }
 
+    &--left {
+        text-align: left;
+    }
+
     &--right {
         text-align: right;
     }
