UIP-3468: IE11 rendered giant device icon glyphs specifically inside Tile Selector due to rules overlapped

--- a/packages/end-user/src/css/shared/_tile-selector.scss
+++ b/packages/end-user/src/css/shared/_tile-selector.scss
@@ -194,6 +194,10 @@ button.tile-button {
         }
     }
 
+    &__content-container {
+        flex-basis: 0;
+    }
+
     &__content {
         @include flexbox-grow(1);
 
