UIP-3415: Added Quick Actions component for PingFederate

--- a/packages/ui-library/src/css/_layout.scss
+++ b/packages/ui-library/src/css/_layout.scss
@@ -32,6 +32,7 @@
 @import 'password-meter';
 @import 'templates/expandable-row-tooltip.scss';
 @import 'templates/section-columns';
+@import 'layout/nav-card';
 @import 'layout/nav-frame';
 @import 'layout/segmented-box';
 
