--- a/packages/ui-library/src/css/ui-library.scss
+++ b/packages/ui-library/src/css/ui-library.scss
@@ -29,6 +29,7 @@
 @import 'multivalues';
 @import 'pagination';
 @import 'progress-indicators';
+@import 'panels';
 @import 'reports';
 @import 'result-sets';
 @import 'row-index-nav';
