UIP-3517: Selected NavFrame text wrapping

--- a/packages/ui-library/src/css/layout/_nav-frame.scss
+++ b/packages/ui-library/src/css/layout/_nav-frame.scss
@@ -114,8 +114,10 @@
         &:hover {
             @include font-pn-semibold;
             background: $color-white;
+            padding-right: 12px;
         }
         &--selected {
+            padding-right: 12px;
             .nav-sidebar__node-label {
                 @include font-pn-bold;
                 position: relative;
