UIP-3213: Dropdown detaches in Tooltip

--- a/packages/ui-library/src/css/_details-tooltip.scss
+++ b/packages/ui-library/src/css/_details-tooltip.scss
@@ -90,7 +90,7 @@
     }
 
     .details-content-inner {
-        overflow: hidden;
+        overflow: visible;
         position: relative;
         box-sizing: border-box;
         background-color: $color-white;
